<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apple</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Apple</string>
	<string name="Web">Web跳转</string>
	<string name="choose_fruits">挑选水果</string>
	<string name="ThreeAcitivity">ThreeAcitivity</string>
	<string name="FourAcitivity">设置</string>
	<string name="s_view_btn">more</string>
	<string name="text_choosefruits">ChooseFrutis</string>
	<string name="wifi">WLAN</string>
	<string name="browser_name">启动浏览器</string>
	<string name="title">I am %1$d years old</string>
	<string name="url">https://www.baidu.com/</string>
	<string name="back">Back</string>
	<string name="forward">Forward</string>
	<string name="refresh">Refresh</string>
	<string name="home">Home</string>
</resources>
