<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical" >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:text="@string/Web" />

    <Button
        android:id="@+id/to_Second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button11"
        android:text="@string/choose_fruits" />

    <Button
        android:id="@+id/to_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_Second"
        android:text="@string/ThreeAcitivity" />

    <Button
        android:id="@+id/to_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_three"
        android:text="@string/FourAcitivity" />

    <Button
        android:id="@+id/browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/to_four"
        android:text="@string/browser_name" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browser"
        android:text="按钮1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:text="按钮2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:text="按钮3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:text="按钮4" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button4"
        android:text="按钮5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:text="按钮6" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button6"
        android:text="按钮7" />

    <Button
        android:id="@+id/button8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button7"
        android:text="按钮8" />

</RelativeLayout>
</ScrollView>